[package]
name = "solidity-tester"
version = "0.1.0"
edition = "2024"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os-server"
license = "MIT OR Apache-2.0"

[lib]
name = "solidity_tester"
path = "src/lib.rs"

[workspace]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
regex = "1"
walkdir = "2"
which = "8.0.0"
tabled = "0.20.0"
rayon = "1.10"
config = { version = "0.15.15", features = ["toml"] }

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3"

[build-dependencies]
toml = "0.9"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
